# var

./: .gitignore  README.md  pyproject.toml
configs/: eval_tokenizer.yaml  generate.yaml  tokenize_dataset.yaml  train_tokenizer.yaml  train_var.yaml
configs/datasets/: ffhq.yaml  imagenet.yaml
configs/tokenizer/: vqvae_base.yaml  vqvae_ffhq.yaml
configs/var/: var_base.yaml
scripts/: debug_train_var.sh  eval_tokenizer.sh  generate.sh  test_vqvae.py  tokenize_dataset.sh  train_jzay.sh  train_jzay_a100.sh  train_jzay_h100.sh  train_tokenizer.sh  train_var.sh
src/var/datasets/: data_sampler.py  image_dataset.py  token_dataset.py  transforms.py
src/var/inference/: decode.py  generator.py  sampler.py
src/var/models/common/: blocks.py
src/var/models/tokenizer/: checkpoint.py  decoder.py  encoder.py  multiscale_quantizer.py  quantizer.py  vqvae.py
src/var/models/var/: transformer.py  var_model.py
src/var/pipelines/: eval_tokenizer.py  generate.py  tokenize_dataset.py  train_tokenizer.py  train_var.py
src/var/training/: ema.py  losses.py  optim.py  schedulers.py  tokenizer_trainer.py  var_trainer.py
src/var/utils/: distributed.py  seed.py
