[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "var"
version = "0.1.0"
description = "Step-by-step VAR reimplementation for autoregressive image prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1,<2.3",
  "torchvision>=0.16,<0.18",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "numpy>=1.24,<2",
  "Pillow>=10.0",
  "einops>=0.7.0",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "requests>=2.14.0",
  "pyjwt[crypto]>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["var*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"
